add button доставка

--- a/delivery_in_bus/templates/delivery_in_bus/courier_instruction.html
+++ b/delivery_in_bus/templates/delivery_in_bus/courier_instruction.html
@@ -10,7 +10,7 @@
     <li>Аккуратно собрать и упаковать продукцию.</li>
 </ol>
 <hr>
-<h5>Время отправки автобусов: 21-15 и 23-00</h5>
+<h5>Время отправления автобусов: 21-15 и 23-00</h5>
 <h5>Место отправки автобусов: ЖД Вокзал 1</h5>
 <a href="https://goo.gl/maps/DvRRDRJtStvFBkmw9">Место посадки в автобус на Google карте</a>
 <script type="text/javascript" charset="utf-8" async
