--- a/orders/templates/add_files_in_order.html
+++ b/orders/templates/add_files_in_order.html
@@ -78,7 +78,7 @@
             </tbody>
         </table>
             <button type="submit" class="btn btn-success"
-                    onClick="location.href='{% url 'delivery_in_bus:instruction_for_courier' Orders.id %}'">Курьер забрал заказ            </button>
+                    onClick="location.href='{% url 'delivery_in_bus:instruction_for_courier' Orders.id %}'">Начать отправку заказа</button>
 
     </div>
 
