--- a/delivery_in_bus/templates/delivery_in_bus/step_2_load_img_phone.html
+++ b/delivery_in_bus/templates/delivery_in_bus/step_2_load_img_phone.html
@@ -12,7 +12,7 @@
 
 </ol>
 <hr>
-<h5>Время отправки автобусов: 21-15 и 23-00</h5>
+<h5>Время отправления автобусов: 21-15 и 23-00</h5>
 <h5 align="center">Место отправки автобусов: ЖД Вокзал 1</h5>
 <script type="text/javascript" charset="utf-8" async
         src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ab7246f8643d2a63fcb03b8c43382b0bf43d8ee9b4f144742a5afdb55d44635cf&amp;width=100%25&amp;height=416&amp;lang=ru_RU&amp;scroll=true"></script>
@@ -36,10 +36,5 @@
     {{ form.as_p }}
     <button type="submit">Загрузить</button>
 
-<!--<form action="" method='post' enctype="multipart/form-data">-->
-<!--    {% csrf_token %}-->
-<!---->
-<!--{{ form.as_p }}-->
-<!--    <button type="submit">Добавить тел</button>-->
 </form>
 {% endblock %}
