--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -101,8 +101,7 @@
 
                 <td>
                     <button type="submit" class="btn btn-primary"
-                            onClick="location.href='{% url 'orders:add_file_in_order' order.id %}'">Заказ № {{ order.id
-                        }}
+                            onClick="location.href='{% url 'orders:add_file_in_order' order.id %}'">Заказ № {{ order.id }}
                     </button>
                 </td>
 
