--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -2,6 +2,45 @@
 {% block title %}Dashboard{% endblock %}
 {% block body %}
 
+{% if request.user.role == 'COURIER' %}
+
+{% if object_list.count > 0 %}
+<h2>Заказы готовые к отправке Автобусом: </h2>
+<div class="row">
+    <div class="col-md-12">
+        <table class="table table-striped table-hover">
+            <thead>
+            <tr>
+                <th>Заказ №</th>
+                <th>Статус</th>
+                <th>Дата заказа</th>
+                <th>Дата готовности</th>
+            </thead>
+            <tbody>
+            {% for order in object_list %}
+            <tr>
+                <td>{{ order.id }}</td>
+                <td>{{ order.status }}</td>
+                <td>{{ order.created }}</td>
+                <td>{{ order.date_complete }}</td>
+                <td><a class="btn btn-success"
+                       href="{% url 'orders:add_file_in_order' order.id %}"
+                       role="button"
+                       aria-expanded="false">
+                    Доставка
+                </a></td>
+
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
+{% endif %}
+
+
+{% else %}
+
+
 
 <div class="row">
 
@@ -86,9 +125,7 @@
             <tr>
                 <th>Заказ №</th>
                 <th>Сумма заказа</th>
-                <!--                <th>Платильщик</th>-->
                 <th>Оплачено</th>
-                <!--                <th>Каменты</th>-->
                 <th>Статус</th>
                 <th>Дата заказа</th>
                 <th>Дата готовности</th>
@@ -173,6 +210,8 @@
         </table>
     </div>
 </div>
+
+{% endif %}
 
 
 {% endblock %}
