--- a/files/templates/files/confirm_order_to_work.html
+++ b/files/templates/files/confirm_order_to_work.html
@@ -17,6 +17,7 @@
         <table class="table table-striped table-hover">
             <thead>
             <tr>
+                <th>№</th>
                 <th>Картинка</th>
                 <th>Материал</th>
                 <th>Размер</th>
@@ -27,6 +28,8 @@
             {% for items in items_in_order %}
 
             <tr>
+                <td>{{ items.product.id }}</td>
+
                 <td><a>{% load thumbnail %} <img src="{% thumbnail items.product.images 100x0 %}"
                                                  class="image-detail"></a></td>
                 <td>{{ items.product.material }}</td>
