--- a/orders/templates/add_files_in_order.html
+++ b/orders/templates/add_files_in_order.html
@@ -241,6 +241,11 @@
                 onClick="location.href='{{Orders.pay_link}}'">Оплатить картой
         </button>
     </td>
+    <td>
+        <button type="submit" class="btn btn-primary"
+                onClick="location.href='{{Orders.pay_link}}'">Получить счет
+        </button>
+    </td>
 
     {% endif %}
 
