--- a/orders/templates/orders/create_invoice.html
+++ b/orders/templates/orders/create_invoice.html
@@ -1,9 +1,12 @@
 {% extends 'base.html'%}
-    <title>{% block title %} {{ title }} {% endblock %}</title>
+<title>{% block title %} {{ title }} {% endblock %}</title>
 {% block body %}
 <h3>{{ title }} </h3>
-<form method="post">{% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Оформить">
-</form>
+<button type="submit" class="btn btn-success"
+        onClick="location.href='{{link_pdf}}'">Скачайте счет
+</button>
+
+Отправьте себе на email
+Отправить себе на WhatsApp
+
 {% endblock %}
