--- a/files/templates/index.html
+++ b/files/templates/index.html
@@ -5,7 +5,11 @@
 
 
 <h2>Список файлов: </h2>
-<!--<hr>-->
+
+<hr>
+<button type="submit" class="btn btn-success"
+        onClick="location.href='{% url 'account:dashboard' %}'">Загрузить файл</button>
+
 <div class="row">
     <div class="col-md-12">
         <table class="table table-striped table-hover">
