add logic button

--- a/orders/templates/add_files_in_order.html
+++ b/orders/templates/add_files_in_order.html
@@ -241,11 +241,13 @@
                 onClick="location.href='{{Orders.pay_link}}'">Оплатить картой
         </button>
     </td>
+    {% if Orders.organisation_payer %}
     <td>
         <button type="submit" class="btn btn-success"
                     onClick="location.href='{% url 'orders:create_invoice' Orders.id %}'">Получить счет</button>
 
     </td>
+    {% endif %}
 
     {% endif %}
 
