--- a/files/templates/index.html
+++ b/files/templates/index.html
@@ -10,6 +10,10 @@
 <button type="submit" class="btn btn-success"
         onClick="location.href='{% url 'account:dashboard' %}'">Загрузить файл</button>
 
+<button type="submit" class="btn btn-primary"
+        onClick="location.href='{% url 'orders:new_order' %}'">Создать заказ
+</button>
+
 <div class="row">
     <div class="col-md-12">
         <table class="table table-striped table-hover">
