--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -28,16 +28,16 @@
     <div class="container">
 
         <!-- Outer Row -->
-<!--        <div class="row justify-content-center">-->
+        <div class="row justify-content-center">
 
-            <div class="col-xl-12 col-lg-1 col-md-1">
+            <div class="col-xl-6 col-lg-1 col-md-1">
 
                 <div class="card o-hidden border-0 shadow-lg my-5">
                     <div class="card-body p-0">
                         <!-- Nested Row within Card Body -->
                         <div class="row">
 <!--                            <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>-->
-                            <div class="col-lg-6">
+                            <div class="col-lg-12">
                                 <div class="p-5">
                                     <div class="text-center">
                                         <h1 class="h4 text-gray-900 mb-4">Сервис онлайн печати</h1>
