--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -146,13 +146,13 @@
             <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
                aria-expanded="true" aria-controls="collapseUtilities">
                 <i class="fas fa-fw fa-wrench"></i>
-                <span>Профиль</span>
+                <span>Настройки</span>
             </a>
             <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                  data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <h6 class="collapse-header">Мой профиль:</h6>
-                    <a class="collapse-item" href="{% url 'account:edit_profile' %}">Изменить</a>
+                    <h6 class="collapse-header">профиль:</h6>
+                    <a class="collapse-item" href="{% url 'account:edit_profile' %}">Профиль пользователя</a>
                     <a class="collapse-item" href="{% url 'account:delivery_list' %}">Адреса доставки</a>
                     <a class="collapse-item" href="{% url 'account:list_organisation' %}">Организации</a>
                     <a class="collapse-item" href="{% url 'password_change' %}">Сменить пароль</a>
