--- a/account/templates/registration/politics.html
+++ b/account/templates/registration/politics.html
@@ -97,7 +97,7 @@
 
     </li>
     <li>
-        2. При регистрации на сайте, оформлении заказа, а также при заполнении анкет или других форм документов,
+        При регистрации на сайте, оформлении заказа, а также при заполнении анкет или других форм документов,
         Вы можете
         предоставить следующую информацию:
         <ul>
@@ -139,7 +139,7 @@
 
     </li>
 
-    <li>3. Всякий раз, передавая Индивидуальному предпринимателю свои персональные данные, в том числе, указывая
+    <li>Всякий раз, передавая Индивидуальному предпринимателю свои персональные данные, в том числе, указывая
         их на сайте,
         отправляя по электронной почте или сообщая лично, Вы соглашаетесь на передачи/обработку своих персональных
         данных, в соответствии с условиями размещенного на сайте Согласия посетителя сайта на обработку персональных
@@ -147,8 +147,7 @@
         Обращаем Ваше внимание на то, что в любой момент Вы можете отказаться от указанных сообщений, обратившись
         к Оператору.
     </li>
-    <li>
-    <li>4. Индивидуальный предприниматель уважает право каждого посетителя сайта на конфиденциальность.
+    <li>Индивидуальный предприниматель уважает право каждого посетителя сайта на конфиденциальность.
         Индивидуальный предприниматель гарантирует, что никакая полученная от Вас информация никогда и ни при каких
         условиях
         не будет предоставлена третьим лицам без Вашего согласия, за исключением случаев, предусмотренных действующим
@@ -159,7 +158,7 @@
         в отношении обработки персональных данных, Вы можете в любое время их изменить, обновить или попросить об
         удалении.
     </li>
-    5. Индивидуальный предприниматель обращает Ваше внимание на то, что при совершении Вами платежей с использованием
+    <li>Индивидуальный предприниматель обращает Ваше внимание на то, что при совершении Вами платежей с использованием
     платежных банковских карт, безопасность обработки платежей, в том числе и Интернет-платежей, гарантируется
     банками-партнерами.</li>
     <li>При проведении платежей предоставляемая Вами персональная информация (имя, адрес, телефон, e-mail, номер
@@ -170,7 +169,7 @@
         Никакая информация о платежах, кроме уведомления об оплате, банками-партнерами Индивидуальному предпринимателю
         не передается.
     </li>
-    <li>6. Индивидуальный предприниматель оставляет за собой право вносить необходимые изменения на сайте, заменять или
+    <li>Индивидуальный предприниматель оставляет за собой право вносить необходимые изменения на сайте, заменять или
         удалять любые части его содержания и ограничивать доступ к сайту в любое время по своему усмотрению.
         Индивидуальный предприниматель также оставляет за собой право изменения Политики конфиденциальности в любое
         время
@@ -178,7 +177,7 @@
         персональным
         данным.
     </li>
-    <li>7. Адрес электронной почты для направления запросов и/или обращений субъектами персональных данных, в том числе
+    <li>Адрес электронной почты для направления запросов и/или обращений субъектами персональных данных, в том числе
         по вопросам изменения/обновления/удаления персональных данных: rpk.reds@yandex.ru.
     </li>
 </ol>
@@ -200,16 +199,16 @@
 
     </li>
     <li>
-        1.2. Субъектами персональных данных, обработка которых осуществляется Индивидуальным предпринимателем Саповым
+        Субъектами персональных данных, обработка которых осуществляется Индивидуальным предпринимателем Саповым
         Александром Николаевичем, являются:
-        кандидаты на вакантные должности (трудоустройство);
+        кандидаты на вакантные должности (трудоустройство);
         работники;
-        представители контрагентов (клиентов — юридических лиц);
-        клиенты — физические лица (потребители, посетители сайта).
+        представители контрагентов (клиентов — юридических лиц);
+        клиенты — физические лица (потребители, посетители сайта).
 
     </li>
     <li>
-        1.3. Цели обработки персональных данных:
+        Цели обработки персональных данных:
         кандидатов на вакантные должности (трудоустройство) — подбор и найм персонала; принятие решения о возможности
         заключения трудового договора с лицами, претендующими на открытые вакансии;
         работников — соблюдение трудового, налогового и пенсионного законодательства Российской Федерации; организация
