add finishing page

--- a/info/templates/help.html
+++ b/info/templates/help.html
@@ -20,7 +20,9 @@
     <li><a href="#Загрузка файлов">Загрузка файлов</a></li>
     <li><a href="#Создание заказа">Создание заказа</a></li>
     <li><a href="#Оплата заказа">Оплата заказа</a></li>
-    <li><a href="#Добавление Организации плательщика">Добавление Организации плательщика</a></li>
+    <li><a href="#Готовность заказа">Готовность заказа</a></li>
+    <li><a href="#Доставка">Доставка</a></li>
+    <li><a href="#Сроки исполнения заказа">Сроки исполнения заказа</a></li>
 </ul>
 
 
@@ -128,10 +130,12 @@
 <p>На странице оплаты появятся оба варианта если если вы указали в заказе организацию плательщика. Если нет то
     будет доступна оплата только по карте.</p>
 <h3 id="Оплата по карте">Оплата по карте:</h3>
+<p>Если вам требуется максимальная оперативность - это самый быстрый способ запустить заказ в работу.</p>
 <ul>
     <li>При нажатии кнопки "Оплата по карте"</li>
     <li>Откроется страница платежного шлюза.</li>
     <li>После оплаты на указанную вами почту придут "Чеки для отчета перед налоговой".</li>
+    <li>Статус заказ измениться на "В работе".</li>
 </ul>
 
 <h3 id="Оплата по счету">Оплата по счету:</h3>
@@ -140,23 +144,28 @@
     в заказе.
     После оплаты счета, оплата в системе появится автоматически и заказ изменит статус на "В работе".</p>
 
-<h2 id="Добавление Организации плательщика">Добавление Организации плательщика</h2>
+<h2 id="Добавление организации плательщика">Добавление организации плательщика</h2>
 <ol>
-    <li>Перейдите в профиль и выберите Организации.</li>
+    <li>Перейдите в настройки и выберите Организации.</li>
     <li>На странице нажмите кнопку "Добавить организацию"</li>
     <li>Введите реквизиты организации.</li>
     <li>Нажмите сохранить.</li>
 </ol>
 
-<h2>Готовность заказа:</h2>
+<h2 id="Готовность заказа">Готовность заказа:</h2>
 <ol>
-    <li>По готовности заказа вам поступи сообщение на почту или Whatsapp о готовности.</li>
+    <li>По готовности заказа вам поступит сообщение на почту или Whatsapp о готовности.</li>
     <li>Закрывающие документы появятся на странице оплаты.</li>
     <li>Время и адрес получения заказы придут в уведомлении.</li>
 
 </ol>
-<h2>Доставка:</h2>
+<h2 id="Доставка">Доставка:</h2>
 По умолчанию доставка отключена (в поле выбора доставки стоит "Самовывоз")
-
+<h2 id="Сроки исполнения заказа">Сроки исполнения заказа</h2>
+<p>
+    Сроки исполнения зависят от объема и сложности заказа.
+    Обычно мы исполняем заказ за 2 дня.
+    Если по каким либо причинам исполнение заказа затягивается, мы обязательно вас об этом ставим в известность.
+</p>
 </body>
 </html>
