add to dashboard Roll up

--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -113,7 +113,30 @@
             </div>
         </div>
     </div>
-</div>
+
+
+    <!-- Earnings (Annual) Card Example -->
+    <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card border-left-success shadow h-100 py-2">
+            <div class="card-body">
+                <div class="row no-gutters align-items-center">
+                    <div class="col mr-2">
+                        <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                            <p><a href=" {% url 'files:create_inter' %}">Заказ мобильного стенда RollUp</a></p>
+
+                        </div>
+                        <div class="h5 mb-0 font-weight-bold text-gray-800">от 4950 руб.</div>
+                    </div>
+                    <div class="col-auto">
+                        <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
 <h3>Мои заказы</h3>
 <button type="submit" class="btn btn-primary"
         onClick="location.href='{% url 'orders:new_order' %}'">Создать заказ
