--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -122,7 +122,7 @@
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                         <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                            <p><a href=" {% url 'files:create_inter' %}">Заказ мобильного стенда RollUp</a></p>
+                            <p><a href=" {% url 'files:create_rollup' %}">Заказ мобильного стенда RollUp</a></p>
 
                         </div>
                         <div class="h5 mb-0 font-weight-bold text-gray-800">от 4950 руб.</div>
