edit page rollup_print.html

--- a/files/templates/files/rollup_print.html
+++ b/files/templates/files/rollup_print.html
@@ -1,20 +1,12 @@
 {% extends 'base.html'%}
 {% load crispy_forms_tags %}
 
-{% block title %}Загрузка макета для Роллапа{% endblock %}
+{% block title %}Загрузка макета для Ролл-апа{% endblock %}
 
 {% block body %}
 
-<h3>Загрузите макет для Роллапа</h3>
+<h3>Загрузите макет для Ролл-апа</h3>
 <p>Файл должен соответствовать требованиям:
-<p>Расширение файла - TIFF</p>
-<p> Цветовая Модель - CMYK</p>
-<p> Разрешение - 150 dpi</p>
-
-
-<p>Рекомендуем использовать LWZ компрессию, ваш файл станет гораздо меньше.
-    У файла не должно быть альфаканалов, путей, несведенных слоев.</p>
-
 <div class="row">
 
     <div class="col-xl-8 col-lg-7">
