--- a/info/templates/help.html
+++ b/info/templates/help.html
@@ -28,7 +28,7 @@
 
 <h2 id="Регистрация на сайте">Регистрация на сайте:</h2>
 <p>
-    Для регистрации на сайте нужно перейти по адресу https://order.san-cd.ru/register/</p>
+    Для регистрации на сайте нужно перейти по адресу <a href="https://order.san-cd.ru/register/">https://order.san-cd.ru/register/</a> </p>
 <ol>
     <li>
         В форме ввести Имя, электронную почту и придумать пароль.
@@ -37,14 +37,14 @@
         На электронную почту прейдет письмо с ссылкой об активации аккаунта.
     </li>
     <li>
-        При подтверждении регистрации вы попадаете на главную страницу сайта.
+        После подтверждения регистрации вы попадаете на главную страницу сайта.
     </li>
 </ol>
 
 <h2 id="Заполнение профиля">Заполнение профиля:</h2>
 <ol>
     <li>
-        Первым делом после регистрации нужно отредактировать профиль пользователя:
+        Первым делом после регистрации нужно заполнить профиль пользователя:
     </li>
     <li>
         Перейдите в настройки / профиль пользователя
@@ -135,14 +135,16 @@
     <li>При нажатии кнопки "Оплата по карте"</li>
     <li>Откроется страница платежного шлюза.</li>
     <li>После оплаты на указанную вами почту придут "Чеки для отчета перед налоговой".</li>
-    <li>Статус заказ измениться на "В работе".</li>
+    <li>Статус заказ измениться на "Оплачен".</li>
 </ul>
-
+<p>Заказ поступает в работу. Через некоторое время статус заказа измениться на статус "В работе"</p>
 <h3 id="Оплата по счету">Оплата по счету:</h3>
 <p>Для оплаты по счету при формировании заказа нужно выбрать плательщика из ваших организаций.
     На странице оплаты будет доступна кнопка "Получить счет". Счет будет выписан на ту организацию которую вы выбрали
     в заказе.
-    После оплаты счета, оплата в системе появится автоматически и заказ изменит статус на "В работе".</p>
+    После оплаты счета, оплата в системе появится автоматически и заказ изменит статус на "Оплачен".</p>
+<p>Заказ поступает в работу. Через некоторое время статус заказа измениться на статус "В работе"</p>
+
 
 <h2 id="Добавление организации плательщика">Добавление организации плательщика</h2>
 <ol>
