button close window

--- a/files/templates/files/confirm_order_to_completed.html
+++ b/files/templates/files/confirm_order_to_completed.html
@@ -10,6 +10,7 @@
 
 <h5 style="text-align: center; ">Заказ изменил статус на "Готов"</h5>
 
+<button onclick="window.close()">Закрыть окно</button>
 
 
 {% endblock %}
