--- a/info/templates/help.html
+++ b/info/templates/help.html
@@ -23,7 +23,8 @@
     <li><a href="#Готовность заказа">Готовность заказа</a></li>
     <li><a href="#Доставка">Доставка</a></li>
     <li><a href="#Сроки исполнения заказа">Сроки исполнения заказа</a></li>
-</ul>
+    <li><a href="#Удаление файлов из заказа">Удаление файла из заказа</a></li>
+    </ul>
 
 
 <h2 id="Регистрация на сайте">Регистрация на сайте:</h2>
@@ -105,19 +106,22 @@
             <li>Выбрать организацию плательщик;</li>
             <li>Выбрать метод доставки;</li>
             <li>Выбрать дату готовности заказа;</li>
-            <li>Нажать кнопку "Новый заказ".</li>
+            <li>Нажать на кнопку "Новый заказ".</li>
         </ul>
     </li>
     <li>В следующем окне сформируется заказ. Снизу будут видны файлы которые можно добавить в заказ.
         Выберите файл и нажмите "Добавить в заказ".
     </li>
-    <li>После добавления 5. Нажмите кнопку "Оформить заказ"нужных файлов в заказ станет активна кнопка "Оформить
-        заказ".
+    <li>После добавления нужных файлов в заказ станет активна кнопка "Оформить заказ"</li>
+      <li>Нажмите кнопку "Оформить заказ"</li>
+        
     </li>
     <li>После нажатия кнопки оформить заказ станет доступна страницы оплаты.</li>
 </ol>
-
-
+<h2 id="Удаление файлов из заказа">Удаление файлов из заказа</h2>
+    <p>Для удаления файлов из заказа нужно нажать на файле в который добавлен в заказ кнопку удалить. Файл будет удален из заказа, но 
+    останется в базе и его можно добавить повторно или в другой заказ</p>
+  <p>Для удаления файла полностью его следует удалить из раздела "Мои файлы"</p>
 <h2 id="Оплата заказа">Оплата заказа:</h2>
 <p>Для оплаты заказа по безналичному расчету требуется указать организацию-плательщика для выставления счетов.</p>
 
@@ -169,5 +173,8 @@
     Обычно мы исполняем заказ за 2 дня.
     Если по каким либо причинам исполнение заказа затягивается, мы обязательно вас об этом ставим в известность.
 </p>
+<button onclick="window.close()">Закрыть окно</button>
+
+
 </body>
 </html>
