--- a/users/templates/users/user_form.html
+++ b/users/templates/users/user_form.html
@@ -10,16 +10,12 @@
 <!--<link rel="stylesheet" href="./style.css">-->
 <div class="well well-sm col-md-6">
 
-    <form action="{% url 'account:create_organisation' %}" method="post">
+    <form action="{% url 'users_create' %}" method="post">
 
         <section class="container">
             <div class="form-group">
                 {% csrf_token %}
                 <h1>Добавить пользователя</h1>
-                <input class="form-control" id="party" name="party" type="text"
-                       placeholder="Введите название, ИНН, ОГРН или адрес организации"/>
-                <input class="form-control" id="bank" name="bank" type="text" autocomplete="off"
-                       placeholder="Введите название БИК банка или название"/>
             </div>
         </section>
         {{ form|crispy }}
