--- a/users/templates/users/users_list.html
+++ b/users/templates/users/users_list.html
@@ -22,7 +22,9 @@
                 <th scope="col">№</th>
                 <th scope="col">Имя</th>
                 <th scope="col">Email</th>
-                <th scope="col">ИНН</th>
+                <th scope="col">Тел</th>
+                <th scope="col">Имя</th>
+                <th scope="col">Фамилия</th>
             </tr>
             </thead>
 
@@ -33,8 +35,11 @@
                 <td>{{ user.id }}</td>
                 <td>{{ user.username }}</td>
                 <td>{{ user.email }}</td>
-                <td>{{ user.phone }}</td>
-              </tr>
+                <td>{{ user.phone_number }}</td>
+                <td>{{ user.first_name }}</td>
+                <td>{{ user.last_name }}</td>
+                <td><a href="{% url 'users_update' user.id %}">Изменить</a>
+            </tr>
             {% endfor %}
             </tbody>
         </table>
