add user delete

--- a/users/templates/users/users_list.html
+++ b/users/templates/users/users_list.html
@@ -39,6 +39,7 @@
                 <td>{{ user.first_name }}</td>
                 <td>{{ user.last_name }}</td>
                 <td><a href="{% url 'users_update' user.id %}">Изменить</a>
+                <td><a href="{% url 'users_delete' user.id %}">Удалить</a>
             </tr>
             {% endfor %}
             </tbody>
