--- a/account/templates/account/profile_list.html
+++ b/account/templates/account/profile_list.html
@@ -1,14 +1,14 @@
 {% extends 'base.html'%}
-<title>{% block title %} Организации: {% endblock %}</title>
+<title>{% block title %} Профиль: {% endblock %}</title>
 {% block body %}
 
 <h1>Мои профиль: </h1>
- <a href="{% url 'account:edit_profile' %}" class="btn btn-primary btn-icon-split">
+<a href="{% url 'profile_edit' %}" class="btn btn-primary btn-icon-split">
                                         <span class="icon text-white-50">
                                             <i class="fas fa-flag"></i>
                                         </span>
-                                        <span class="text">Редактировать</span>
-                                    </a>
+    <span class="text">Редактировать</span>
+</a>
 
 <hr>
 <div class="row">
@@ -36,7 +36,9 @@
                 <td>{{ item.whatsapp }}</td>
                 <td>{{ item.role }}</td>
                 <td>{{ item.telegram }}</td>
-                <!--                                                    <td>{{ oraganisation.okpk }}</td>-->
+                <td>
+                    <a href="{% url 'profile_edit' %}">Изменить</a>
+                </td>
             </tr>
             {% endfor %}
             </tbody>
