--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -152,7 +152,7 @@
                  data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
                     <h6 class="collapse-header">профиль:</h6>
-                    <a class="collapse-item" href="{% url 'account:edit_profile' %}">Профиль пользователя</a>
+                    <a class="collapse-item" href="{% url 'profile_list' %}">Профиль пользователя</a>
                     <a class="collapse-item" href="{% url 'account:delivery_list' %}">Адреса доставки</a>
                     <a class="collapse-item" href="{% url 'account:list_organisation' %}">Организации</a>
                     <a class="collapse-item" href="{% url 'password_change' %}">Сменить пароль</a>
@@ -279,7 +279,7 @@
                         <!-- Dropdown - User Information -->
                         <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                              aria-labelledby="userDropdown">
-                            <a class="dropdown-item" href="{% url 'account:edit_profile' %}">
+                            <a class="dropdown-item" href="{% url 'profile_list' %}">
                                 <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                 Профиль
                             </a>
