--- a/account/templates/account/profile_list.html
+++ b/account/templates/account/profile_list.html
@@ -17,12 +17,11 @@
             <thead>
             <tr>
 
-                <th scope="col">№</th>
                 <th scope="col">Email</th>
-                <th scope="col">Тел</th>
-                <th scope="col">Whatsapp</th>
+                <th scope="col">Телефон</th>
+                <th scope="col">Отсылать сообщения на Whatsapp</th>
+                <th scope="col">Отсылать сообщения в Telegram</th>
                 <th scope="col">Статус</th>
-                <th scope="col">ОКПО:</th>
             </tr>
             </thead>
 
@@ -30,12 +29,11 @@
 
             <tbody>
             <tr>
-                <td>{{ item.id }}</td>
                 <td>{{ item.email }}</td>
                 <td>{{ item.phone_number }}</td>
                 <td>{{ item.whatsapp }}</td>
-                <td>{{ item.role }}</td>
                 <td>{{ item.telegram }}</td>
+                <td>{{ item.role }}</td>
                 <td>
                     <a href="{% url 'profile_edit' %}">Изменить</a>
                 </td>
