--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -41,7 +41,6 @@
 {% else %}
 
 
-
 <div class="row">
 
 
@@ -134,13 +133,17 @@
             </div>
         </div>
     </div>
-
+</div>
 
 
 <h3>Мои заказы</h3>
-<button type="submit" class="btn btn-primary"
-        onClick="location.href='{% url 'orders:new_order' %}'">Создать заказ
-</button>
+<a href="{% url 'orders:new_order' %}" class="btn btn-primary btn-icon-split">
+                                        <span class="icon text-white-50">
+                                            <i class="fas fa-flag"></i>
+                                        </span>
+    <span class="text">Создать заказ</span>
+</a>
+
 <div class="row">
     <div class="col-md-12">
         <table class="table table-striped table-hover">
@@ -161,8 +164,7 @@
 
                 <td>
                     <button type="submit" class="btn btn-primary"
-                            onClick="location.href='{% url 'orders:add_file_in_order' order.id %}'">Заказ № {{ order.id }}
-                    </button>
+            onClick="location.href='{% url 'orders:add_file_in_order' order.id %}'">Заказ № {{ order.id }}                   </button>
                 </td>
 
                 {% else %}
@@ -178,7 +180,8 @@
                     </a>
                     <div class="dropdown-menu dropdown-menu-right animated--grow-in"
                          aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="{% url 'orders:add_file_in_order' order.id %}">Добавить файлы</a>
+                        <a class="dropdown-item" href="{% url 'orders:add_file_in_order' order.id %}">Добавить
+                            файлы</a>
                         <a class="dropdown-item" href="{% url 'orders:order_pay' order.id %}">Оплатить</a>
                         <a class="dropdown-item" href="{% url 'orders:update_order' order.id %}">Редактировать</a>
                         <div class="dropdown-divider"></div>
