--- a/info/templates/finishing.html
+++ b/info/templates/finishing.html
@@ -1,6 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!--    <link href="{% static 'css/new_style.css' %} " rel="stylesheet" type="text/css">-->
+
     <meta charset="UTF-8">
     <title>Финишная обработка баннера</title>
 </head>
