--- a/info/templates/help.html
+++ b/info/templates/help.html
@@ -1,13 +1,34 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--    <link rel="stylesheet" href="css/new_style.css">-->
+    <!--    <link href="{% static 'css/new_style.css' %} " rel="stylesheet" type="text/css">-->
+<!--        <link href='css/new_style.css' rel="stylesheet" type="text/css">-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <title>Описание работы с сервисом</title>
 </head>
 <body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
+<header>
+    <div class="wrap-logo">
+        <a href="#logo" class="logo">logo</a>
+    </div>
+    <nav>
+        <a href="#">Мои работы</a>
+        <a href="#">Мои навыки</a>
+        <a href="#">Контакты</a>
+    </nav>
+
+</header>
 
 <h1>Общая информация</h1>
 <p>Тут мы постарались кратко и понятно описать, как работает наш онлайн-сервис. Также мы готовы проконсультировать Вас
@@ -24,12 +45,13 @@
     <li><a href="#Доставка">Доставка</a></li>
     <li><a href="#Сроки исполнения заказа">Сроки исполнения заказа</a></li>
     <li><a href="#Удаление файлов из заказа">Удаление файла из заказа</a></li>
-    </ul>
+</ul>
 
 
 <h2 id="Регистрация на сайте">Регистрация на сайте:</h2>
 <p>
-    Для регистрации на сайте нужно перейти по адресу <a href="https://order.san-cd.ru/register/">https://order.san-cd.ru/register/</a> </p>
+    Для регистрации на сайте нужно перейти по адресу <a href="https://order.san-cd.ru/register/">https://order.san-cd.ru/register/</a>
+</p>
 <ol>
     <li>
         В форме ввести Имя, электронную почту и придумать пароль.
@@ -113,15 +135,16 @@
         Выберите файл и нажмите "Добавить в заказ".
     </li>
     <li>После добавления нужных файлов в заказ станет активна кнопка "Оформить заказ"</li>
-      <li>Нажмите кнопку "Оформить заказ"</li>
-        
+    <li>Нажмите кнопку "Оформить заказ"</li>
+
     </li>
     <li>После нажатия кнопки оформить заказ станет доступна страницы оплаты.</li>
 </ol>
 <h2 id="Удаление файлов из заказа">Удаление файлов из заказа</h2>
-    <p>Для удаления файлов из заказа нужно нажать на файле в который добавлен в заказ кнопку удалить. Файл будет удален из заказа, но 
+<p>Для удаления файлов из заказа нужно нажать на файле в который добавлен в заказ кнопку удалить. Файл будет удален из
+    заказа, но
     останется в базе и его можно добавить повторно или в другой заказ</p>
-  <p>Для удаления файла полностью его следует удалить из раздела "Мои файлы"</p>
+<p>Для удаления файла полностью его следует удалить из раздела "Мои файлы"</p>
 <h2 id="Оплата заказа">Оплата заказа:</h2>
 <p>Для оплаты заказа по безналичному расчету требуется указать организацию-плательщика для выставления счетов.</p>
 
