add loguot - > redirect login page str 367

--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -364,7 +364,7 @@
                 <div class="modal-body">Вы действительно хотите выйти?</div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="{% url 'logout' %}">Выход</a>
+                    <a class="btn btn-primary" href="{% url 'login' %}">Выход</a>
                 </div>
             </div>
         </div>
