--- a/account/templates/registration/logged_out.html
+++ b/account/templates/registration/logged_out.html
@@ -12,7 +12,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Сервис онлайн печати баннеров</title>
+    <title>--Сервис онлайн печати баннеров--</title>
 
     <!-- Custom fonts for this template-->
     <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %} " rel="stylesheet" type="text/css">
