--- a/files/templates/index.html
+++ b/files/templates/index.html
@@ -8,7 +8,7 @@
 
 <hr>
 <button type="submit" class="btn btn-success"
-        onClick="location.href='{% url 'files:create_files' %}'">Загрузить файл</button>
+        onClick="location.href='{% url 'account:dashboard' %}'">Загрузить файл</button>
 
 <button type="submit" class="btn btn-primary"
         onClick="location.href='{% url 'orders:new_order' %}'">Создать заказ
