--- a/info/templates/help.html
+++ b/info/templates/help.html
@@ -18,17 +18,31 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 
-<header>
-    <div class="wrap-logo">
-        <a href="#logo" class="logo">logo</a>
-    </div>
-    <nav>
-        <a href="#">Мои работы</a>
-        <a href="#">Мои навыки</a>
-        <a href="#">Контакты</a>
-    </nav>
+<div class="container">
 
-</header>
+
+    
+
+        <header class="d-flex justify-content-center py-3">
+
+            
+            <ul class="nav nav-pills">
+              <li class="nav-item"><a href="#" class="nav-link">Мобильные стенды</a></li>
+              <li class="nav-item"><a href="#" class="nav-link">Информационные стенды</a></li>
+
+              <li class="nav-item"><a href="#" class="nav-link"> Цены на печать</a></li>
+              <li class="nav-item"><a href="#" class="nav-link">Как заказать</a></li>
+              <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+            </ul>
+
+            <div class="col-md-3 text-end">
+                <button type="button" class="btn btn-outline-primary me-2">Login</button>
+                <button type="button" class="btn btn-primary">Sign-up</button>
+              </div>
+          </header>
+
+          
+          
 
 <h1>Общая информация</h1>
 <p>Тут мы постарались кратко и понятно описать, как работает наш онлайн-сервис. Также мы готовы проконсультировать Вас
@@ -197,7 +211,7 @@
     Если по каким либо причинам исполнение заказа затягивается, мы обязательно вас об этом ставим в известность.
 </p>
 <button onclick="window.close()">Закрыть окно</button>
-
+</div>
 
 </body>
 </html>
